增加周报评论及统计规则接口
