# model/wt/response/wt_rules.go
@@ -1,0 +1,11 @@
+package response
+
+import "goweb-gin-demo/global"
+
+type WtRuleResult struct {
+	global.GLOBAL_MODEL
+	UserId    int
+	Reporters []string
+	StartTime string
+	EndTime   string
+}
